--- a/cardio_help/pubspec.yaml
+++ b/cardio_help/pubspec.yaml
@@ -43,7 +43,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+    - assets/icon.png
     - lib/databases/drugs/drugs.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
