--- a/cardio_help/pubspec.yaml
+++ b/cardio_help/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   #  - images/a_dot_burr.jpeg
     - assets/attention.png
     - assets/interactive.png
+    - assets/interactive.svg
     - lib/databases/drugs/drugs.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -58,10 +59,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: MyFlutterApp
+      fonts:
+        - asset: assets/fonts/MyFlutterApp.ttf
+
+    - family: Attention
+      fonts:
+        - asset: assets/fonts/Attention.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
