--- a/cardio_help/pubspec.yaml
+++ b/cardio_help/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.5.0
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +43,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/attention.png
+    - assets/interactive.png
+    
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
     - lib/databases/drugs/drugs.json
@@ -57,6 +61,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: MyFlutterApp
+      fonts:
+        - asset: assets/fonts/MyFlutterApp.ttf
+
+    - family: Attention
+      fonts:
+        - asset: assets/fonts/Attention.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
